# cecxx

./: .envrc  .gitignore  CMakeLists.txt  Justfile  README.md  defaults.hpp.in
.github/workflows/: publish_python_wheel_test.yml
cmake/: Package.cmake  ProjectConfig.cmake  cecxx-config.cmake  cecxx.pc.in
example/evaluator/: CMakeLists.txt  evaluate_each_problem.cpp  evaluate_separate_problem.cpp
include/cecxx/: mdspan.hpp
include/cecxx/benchmark/: evaluator.hpp
include/cecxx/benchmark/cec_2017/: basic_problems.hpp  complex_problems.hpp  hybrid_problems.hpp
include/cecxx/benchmark/detail/legacy/functions/multimodal/: bi_rastrigin2017.hpp
include/cecxx/benchmark/detail/problem_invokers/: affine_transformations.hpp  basic_problem_invoker.hpp  complex_problem_invoker.hpp  decorators.hpp  hybrid_problem_invoker.hpp
include/cecxx/detail/benchmark/evaluator/: context.hpp  defaults.hpp  evaluate.hpp  func_types.hpp  helpers.hpp
include/cecxx/detail/benchmark/evaluator/cec_2013/: basic_problems.hpp  complex_problems.hpp  consts.hpp  problem_evaluation_mappings.hpp
include/cecxx/detail/benchmark/evaluator/cec_2014/: basic_problems.hpp  complex_problems.hpp  consts.hpp  hybrid_problems.hpp  problem_evaluation_mappings.hpp
include/cecxx/detail/benchmark/evaluator/cec_2017/: basic_problems.hpp  complex_problems.hpp  consts.hpp  hybrid_problems.hpp  problem_evaluation_mappings.hpp
include/cecxx/detail/benchmark/evaluator/legacy/: affine_transformation.hpp
include/cecxx/detail/benchmark/evaluator/legacy/functions/multimodal/: bi_rastrigin.hpp  bi_rastrigin2017.hpp
include/cecxx/detail/benchmark/evaluator/problem_invokers/: affine_transformations.hpp  basic_problem_invoker.hpp  complex_problem_invoker.hpp  decorators.hpp  hybrid_problem_invoker.hpp
python/: CMakeLists.txt  README.md  TODO  pyproject.toml
python/cecxx/: __init__.py  basic_example.py  editions.py  eval.py  evaluate.py  example.py
python/src/: bindings.cpp
scripts/: run_compliance_tests.py
src/benchmark/: evaluator.cpp  helpers.cpp  table_io.cpp  table_io.hpp
src/benchmark/cec_2013/: problem_evaluation_mappings.cpp
src/benchmark/cec_2014/: problem_evaluation_mappings.cpp
src/benchmark/cec_2017/: problem_evaluation_mappings.cpp
src/benchmark/detail/: context.cpp  evaluate.cpp
src/benchmark/detail/legacy/functions/multimodal/: bi_rastrigin.cpp  bi_rastrigin2017.cpp
src/legacy/: affine_transformation.cpp
test/compliance/: CMakeLists.txt  cec2013.test.cpp  cec2014.test.cpp  cec2017.test.cpp
test/compliance/helpers/: combinators.hpp  fixtures.hpp
test/compliance/oracle/: cec2017.cpp
test/unit/: CMakeLists.txt  evaluator.test.cpp
